enabled limiting the timespan when requesting previous transactions
